# automotive-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  client.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  server.py
.devcontainer/: Dockerfile
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: build_image.yml  release_drafter.yml
docker/: Dockerfile
docs/installation/: index.md
scripts/: example_event_broadcast.sh
src/llm/: connects.py  prompt.py
src/llm/tools/: fan.py  front_windshield.py  google_map.py  handler.py  temperature.py  time.py  weather.py
src/routers/: tts.py
src/tts/: filler.py
static/: index.html
utils/llm/: connects.py
utils/llm/tools/: fan.py  front_windshield.py  handler.py  temperature.py  time.py  weather.py
